libkis: Use the proper pointer types for marshalling resources on activation

BUG: 461555
(cherry picked from commit 33f242b8875ef305541bd6536f17500906ea5cc4)